# atrop-protocol

./: .clang-format  .dockerignore  .gitignore  .hadolint.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.json  config.yaml  daemon_init_patch.patch  dev-requirements.txt  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
daemon/: CMakeLists.txt  logger.py
daemon/common/: README.md  logger.cpp  logger.hpp
daemon/control_plane/: CMakeLists.txt  README.md  correction_handler.cpp  correction_handler.hpp  decision_handler.cpp  decision_handler.hpp  discovery_handler.cpp  discovery_handler.hpp  exit_handler.cpp  exit_handler.hpp  main.cpp  observation_handler.cpp  security_handler.cpp  security_handler.hpp
daemon/control_plane/fsm/: README.md  base_state.cpp  base_state.hpp  fsm_engine.cpp  fsm_engine.hpp  fsm_main.cpp  fsm_transitions.hpp  state_base.hpp  state_correct.cpp  state_correct.hpp  state_decide.cpp  state_decide.hpp  state_discovery.cpp  state_discovery.hpp  state_enforce.cpp  state_enforce.hpp  state_exit.cpp  state_exit.hpp  state_feedback.cpp  state_feedback.hpp  state_init.cpp  state_init.hpp  state_learn.cpp  state_learn.hpp  state_observe.cpp  state_observe.hpp
daemon/control_plane/fsm/states/: correct_state.cpp  correct_state.hpp  decide_state.cpp  decide_state.hpp  discovery_state.cpp  discovery_state.hpp  enforce_state.cpp  enforce_state.hpp  exit_state.cpp  exit_state.hpp  feedback_state.cpp  feedback_state.hpp  init_state.cpp  init_state.hpp  learn_state.cpp  learn_state.hpp  observe_state.cpp  observe_state.hpp
daemon/control_plane/handlers/: README.md  atrop_packet_handlers.hpp  decision_handler.cpp  decision_handler.hpp  discovery_handler.cpp  discovery_handler.hpp  observation_handler.cpp  observation_handler.hpp
daemon/data_plane/: CMakeLists.txt  README.md  main.cpp  main.py
daemon/handlers/: README.md  correction_handler.cpp  correction_handler.hpp  decision_handler.cpp  decision_handler.hpp  decision_handler.py  discovery_handler.cpp  discovery_handler.hpp  discovery_handler.py  exit_handler.cpp  exit_handler.hpp  exit_handler.py  observation_handler.cpp  observation_handler.hpp  security_handler.cpp  security_handler.hpp  security_handler.py
daemon/ipc/: CMakeLists.txt  README.md  correction_handler.cpp  correction_handler.hpp  correction_handler.py  decision_handler.cpp  discovery_handler.cpp  discovery_handler.hpp  exit_handler.cpp  main.cpp  main.py  observation_handler.cpp  observation_handler.hpp  observation_handler.py  security_handler.cpp  security_handler.hpp
docs/: dev_setup.md  initial_implementation_scope.md  test_strategy.md
docs/SWD/SM/: ATROP_Smart_Task_Tracker_Final_T101_Updated.xlsx  Atrop Epic.docx  SME_Profile_Matrix.md  atrop-wbs.puml  role_def.md
docs/SWD/SM/mvp/: README.md
docs/architecture/: README.md
docs/diagrams/: README.md
docs/fsm/: transitions.md
docs/standards/: README.md
docs/whitepaper/: README.md
examples/frr-integration/: README.md
examples/mininet-topologies/: README.md
examples/ubuntu-integration/: README.md
examples/vendor-hooks/: README.md
github/workflows/: ci.yml
models/evaluation/: README.md
models/export/: README.md
models/pretrained/: README.md
models/training_data/: README.md
sdk/: test_core.py
sdk/c++/: CMakeLists.txt  README.md  api.cpp  config_loader.cpp  config_loader.hpp  main.cpp
sdk/c++/include/: config_loader.hpp
sdk/grpc/: README.md  atrop.proto
sdk/python/: README.md  setup.py
sdk/python/src/: core.py
sdk/python/src/atrop_sdk/: __init__.py  config_loader.py
sdk/telemetry/: README.md
sdk/yang-models/: README.md
specs/ai_control_plane/: README.md
specs/ml_data_plane/: README.md
specs/packet_format/: README.md  atrop_header.h  atrop_packet.c  atrop_packet.h  atrop_packet_type.h  atrop_tlv.h
specs/protocol/: README.md
specs/security/: README.md
specs/state_machines/: README.md  atrop_fsm.c  atrop_fsm.h
test/: conftest.py  test_fsm.c  test_header.c  test_tlv.c
test/c++/: CMakeLists.txt  test_config_loader.cpp  test_fsm.cpp  test_handlers.cpp  test_sample.cpp  test_sdk.cpp
test/fsm-simulations/: README.md
test/integration/: README.md
test/unit/: README.md  __init__.py  test_demo.py
test/unit/c++/: CMakeLists.txt  test_config_loader.cpp  test_fsm.cpp
test/unit/config/: fallback.json  missing_required.json  valid.json  valid.yaml
test/unit/data_plane/: test_main.py
test/unit/logger/: CMakeLists.txt  test_logger.cpp  test_logger.py
test/unit/protocol/: test_fsm.cpp  test_handlers.cpp  test_parser.cpp
test/unit/sdk/: test_config_loader.py  test_core.py
test/unit/sdk/config/: config.json  config.yaml  invalid.json  missing_log_dir.yaml
tools/model_uploader/: README.md
tools/testenv/: testenvtestenv.sh
tools/validator/: README.md
tools/visualization/: README.md
